# sem-qt6

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AddWindow.py  Common.py  DataApi.py  EQLineEdit.py  EQMessageBox.py  LICENSE  ListWindow.py  README.md  add.py  dem.py  makefile  mkdocs.yml  pyproject.toml  sem-qt  sem.py
docs/: index.md  makefile
docs/reference/: CQTableView.md  Common.md  ListForm.md  MainWindow.md  ModelWrapper.md
docs/tutorial/: adv.md  basic.md  cc.md  schema.md
modules/: CQTableView.py  CQTableWidget.py  Common.py  ListForm.py  MainWindow.py  ModelWrapper.py  add_form.py  add_window.py  common.py  config.py  cqwidgets.py  db.py  import_dialog.py  import_show_dialog.py  list_form.py  list_window.py  login_dialog.py  main.py  main_window.py  model.py  settings_window.py
modules/CQWidgets/: CQLineEdit.py  CQTableWidget.py
modules/db/: connect.py  csv.py  data.py
modules/old/: CQTableWidget.py  add_form.py  csv.py  import_dialog.py  list_form.py  main_window.py
modules/windows/: add_form.py  import_dialog.py  list_form.py  main_window.py
resources/: add.ipe  clear.ipe  close.ipe  create.ipe  export.ipe  import.ipe  login.ipe  logout.ipe  open.ipe
