[tool.poetry]
name = "sem-qt"
version = "2.0.0"
description = "Simple expense manager"
authors = ["aangelone2 <adriano.angelone.work@gmail.com>"]
license = "GPL v3"
readme = "README.md"
packages = [{include = "modules"}]

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.5.2"
# vulnerability fix requirement
urllib3 = "^2.0.7"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20"}
mkdocs-material = "^9.1.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
