[tool.poetry]
name = "sem-qt6"
version = "2.0.6"
description = "Simple expense manager"
authors = ["aangelone2 <adriano.angelone.work@gmail.com>"]
license = "GPL v3"
readme = "README.md"
packages = [{include = "modules"}]

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.5.2"
# vulnerability fixes requirements
urllib3 = "^2.2.2"
jinja2 = "^3.1.4"
idna = "^3.7"
requests = "^2.32.0"
certifi = "^2024.07.04"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20"}
mkdocs-material = "^9.1.19"

[tool.poetry.scripts]
sem-qt6 = "modules.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
